{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 106,
  "lineage": "a3931b1c-7647-bedc-b362-4a23fc8c9be7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c97965b52e80b53a",
            "domain": "vpc",
            "id": "eipalloc-073a28cd78283e5ea",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a0c17e5f806920fd",
            "private_dns": "ip-10-0-0-5.ec2.internal",
            "private_ip": "10.0.0.5",
            "public_dns": "ec2-54-88-98-92.compute-1.amazonaws.com",
            "public_ip": "54.88.98.92",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:055636501164:instance/i-05ef37d980a4a2049",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ef37d980a4a2049",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ficha-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-041842a195a93d209",
            "private_dns": "ip-10-0-0-173.ec2.internal",
            "private_ip": "10.0.0.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0861fb5cd51cdc646",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f93c7d2940b47c87",
            "tags": {
              "Name": "FICHA-DATABASE"
            },
            "tags_all": {
              "Name": "FICHA-DATABASE"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b2ba7f4f1f303b12",
              "sg-0c828190d7771df1b"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_subnet.private",
            "aws_vpc.main",
            "aws_key_pair.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:055636501164:instance/i-0176790554eddc259",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0176790554eddc259",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ficha-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09337781f3b19f076",
            "private_dns": "ip-10-0-1-166.ec2.internal",
            "private_ip": "10.0.1.166",
            "public_ip": "54.160.8.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e45b721847fa94e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040f83e13168eccf3",
            "tags": {
              "Name": "FICHA-SERVER"
            },
            "tags_all": {
              "Name": "FICHA-SERVER"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b2ba7f4f1f303b12",
              "sg-0c828190d7771df1b"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.allow_ping",
            "aws_security_group.allow_ssh",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055636501164:internet-gateway/igw-0f388f4ff8de7be90",
            "id": "igw-0f388f4ff8de7be90",
            "owner_id": "055636501164",
            "tags": {
              "Name": "ficha_inernet_gateway"
            },
            "tags_all": {
              "Name": "ficha_inernet_gateway"
            },
            "vpc_id": "vpc-057d52afbfd8418b1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073a28cd78283e5ea",
            "connectivity_type": "public",
            "id": "nat-0bbb85be82f861b86",
            "network_interface_id": "eni-04c22aec482e3206b",
            "private_ip": "10.0.1.145",
            "public_ip": "54.88.98.92",
            "subnet_id": "subnet-040f83e13168eccf3",
            "tags": {
              "Name": "ficha_nat_gateway"
            },
            "tags_all": {
              "Name": "ficha_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-09efcc1a69aa832cd",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:dd:1a:c1:9a:4b",
            "private_ip": "10.0.1.243",
            "private_ips": [
              "10.0.1.243"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0cda6f02fa960822b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040f83e13168eccf3",
            "tags": {
              "Name": "ficha-server-network-interface"
            },
            "tags_all": {
              "Name": "ficha-server-network-interface"
            }
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055636501164:route-table/rtb-07f33a04c80f68d76",
            "id": "rtb-07f33a04c80f68d76",
            "owner_id": "055636501164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0bbb85be82f861b86",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ficha_private_route_table"
            },
            "tags_all": {
              "Name": "ficha_private_route_table"
            },
            "vpc_id": "vpc-057d52afbfd8418b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055636501164:route-table/rtb-091494668be68d4ed",
            "id": "rtb-091494668be68d4ed",
            "owner_id": "055636501164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f388f4ff8de7be90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ficha_public_route_table"
            },
            "tags_all": {
              "Name": "ficha_public_route_table"
            },
            "vpc_id": "vpc-057d52afbfd8418b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aa1c6444dffb474",
            "route_table_id": "rtb-07f33a04c80f68d76",
            "subnet_id": "subnet-0f93c7d2940b47c87"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045af929f4428af44",
            "route_table_id": "rtb-091494668be68d4ed",
            "subnet_id": "subnet-040f83e13168eccf3"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_internet_gateway.igw",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055636501164:security-group/sg-0b2ba7f4f1f303b12",
            "description": "Allow ping inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2ba7f4f1f303b12",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ping to instance",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ping",
            "name_prefix": "",
            "owner_id": "055636501164",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ping"
            },
            "tags_all": {
              "Name": "allow_ping"
            },
            "timeouts": null,
            "vpc_id": "vpc-057d52afbfd8418b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055636501164:security-group/sg-0c828190d7771df1b",
            "description": "Allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c828190d7771df1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "055636501164",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-057d52afbfd8418b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055636501164:subnet/subnet-0f93c7d2940b47c87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0f93c7d2940b47c87",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055636501164",
            "tags": {
              "Name": "ficha-private-subnet"
            },
            "tags_all": {
              "Name": "ficha-private-subnet"
            },
            "vpc_id": "vpc-057d52afbfd8418b1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055636501164:subnet/subnet-040f83e13168eccf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-040f83e13168eccf3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055636501164",
            "tags": {
              "Name": "ficha-public-subnet"
            },
            "tags_all": {
              "Name": "ficha-public-subnet"
            },
            "vpc_id": "vpc-057d52afbfd8418b1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055636501164:vpc/vpc-057d52afbfd8418b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b55bb1ab9d6444fd",
            "default_route_table_id": "rtb-04416d473f038d015",
            "default_security_group_id": "sg-0cda6f02fa960822b",
            "dhcp_options_id": "dopt-063e064d277091659",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-057d52afbfd8418b1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04416d473f038d015",
            "owner_id": "055636501164",
            "tags": {
              "Name": "ficha-vpc"
            },
            "tags_all": {
              "Name": "ficha-vpc"
            }
          }
        }
      ]
    }
  ]
}